# LOF-Framework

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  MODULE.bazel  Makefile  README.md  package.json  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.agentkanban/tasks/: task_20260721_01_phase1_garanties.md  task_20260721_02_phase2_stabilisation.md  task_20260721_03_phase3_bronze_silver_reasoning.md  task_20260721_04_phase4_cegis.md  task_20260721_05_phase5_apprentissage.md  task_20260721_06_phase6_language_agnostic.md  task_20260721_07_phase7_mobile_field_app.md  task_20260721_08_phase8_admin_crud.md
.github/workflows/: ci.yml  publish.yml
.lof/diagnostics/: latest.json
.opencode/agents/: architecture-reviewer.md  ast-patch-engineer.md  bronze-curator.md  constraint-engineer.md  framework-reviewer.md  generated-project-validator.md  gold-dsl-engineer.md  graph-engineer.md  language-designer.md  orchestrator.md  reasoning-engineer.md  release-engineer.md  semantic-extraction-engineer.md  template-engineer.md  test-engineer.md
.opencode/commands/: add-constraint.md  add-instance.md  add-patch.md  add-rule.md  add-template.md  add-ticket.md  add-type.md  build-gold.md  check.md  compile.md  extract.md  infer.md  inspect-graph.md  release.md  repair.md  review.md  validate-model.md
.opencode/shared/: architecture-context.md  coding-rules.md  diagnostic-format.md  generated-files-policy.md  validation-gates.md
.opencode/skills/: add-ast-patch.md  add-bronze-ticket.md  add-inference-rule.md  add-projection-type.md  add-regression-test.md  add-smt-constraint.md  edit-jinja-template.md  extract-silver-claims.md  inspect-instance-graph.md  inspect-repository.md  materialize-gold.md  repair-from-diagnostic.md  review-generated-project.md  trace-pipeline-impact.md
.opencode/workflows/: diagnostic-repair-loop.md  feature-development.md  release-validation.md  ticket-to-project.md
bazel/: lof_rules.bzl  repositories.bzl  toolchains.bzl
data/bronze/entries/: bronze-aa2c82e29792.json
data/silver/claims/: claim_885c2044.json  claim_c0969ff9.json
data/silver/entities/: ent_mission_d8ba5e.json  ent_ouvriers_3c6dc1.json  ent_planning_979df8.json
definitions/: project.json
definitions/targets/: expo_component.json  expo_screen.json  expo_service.json  markdown_document.json  python_module.json  react_component.json  typescript_module.json  yaml_file.json
definitions/types/: markdown_document.json  mermaid_node.json  named_element.json  python_entity.json  python_service.json
definitions/types/backend/: backend_conftest.json  backend_pyproject.json  (+9 more)
docs/: architecture-complete.md  architecture.md  bazel.md  compilation.md  concepts.md  examples.md  graph.md  instances.md  kanban.md  llm-workflow.md  patches.md  publishing.md  templates.md  type-system.md
docs/architecture/: m3-formalization.md  mde-levels.md
docs/reviews/: code-review.md
examples/legacy/: customer.json  customer_service.json  project.json
instances/: backend_conftest.json  backend_pyproject.json  customer_backend_tests.json  customer_detail_page.json  customer_form.json  customer_frontend_tests.json  customer_hooks.json  customer_init.json  customer_list_page.json  customer_model.json  customer_repository.json  customer_router.json  customer_schemas.json  customer_types.json  database_config.json  docker_compose.json  fastapi_app.json  model_diagram.json  project_backend_tests.json  project_detail_page.json  project_form.json  project_frontend_tests.json  project_hooks.json  project_init.json  project_list_page.json  project_model.json  project_repository.json  project_router.json  project_schemas.json  project_service.json  project_types.json  react_app.json  task_backend_tests.json  task_detail_page.json  task_form.json  task_frontend_tests.json  task_hooks.json  task_init.json  task_list_page.json  task_model.json  (+8 more)
instances/mobile/: client_atlantique.json  employee_julien.json  employee_karim.json  employee_lucas.json  mission_depannage_boucherie.json  mission_maintenance_logistique.json  mission_panneaux_atlantique.json  mission_porte_boulangerie.json  worksite_chambre_froide.json
isoclim/: Makefile  compose.yml
patches/python/: customer_add_method.json
profiles/admin-crud/: profile.yaml
profiles/fastapi-react/: profile.json
profiles/mobile-field/: profile.yaml
programs/isoclim/: apps  compose.yml  isoclim.json
reports/: latest.json
schemas/: gold-application.schema.json  instance.schema.json  patch.schema.json  project.schema.json  target.schema.json  type.schema.json
src/lof/: __init__.py  api.py  cli.py
templates/backend/: conftest.py.j2  database.py.j2  main.py.j2  model.py.j2  pyproject.toml.j2  repository.py.j2  router.py.j2  schemas.py.j2  service.py.j2  test_entity.py.j2
templates/frontend/: App.tsx.j2  package.json.j2  vite.config.ts.j2
templates/markdown/: entity.md.j2
templates/mermaid/: entity.mmd.j2
templates/python/: __init__.py.j2  entity.py.j2  service.py.j2
templates/typescript/: entity.ts.j2
tests/fixtures/: admin_demo.yaml  isoclim_app.py  library_app.py
tests/unit/: test_context_resolver.py  test_errors.py  test_gold_projection.py  test_graph.py  test_instance_definition.py  test_naming.py  test_patch_definition.py  test_phase1_fixes.py  test_phase2_stabilisation.py  test_phase3_reasoning.py  test_phase4_cegis.py  test_phase5_inductive.py  test_phase6_language_agnostic.py  test_phase7_mobile_field.py  test_phase8_admin_crud.py  test_renderer.py  test_settings.py  test_type_definition.py
tools/: BUILD.bazel  compile.py  inspect_graph.py  validate.py
(+418 files in other folders)
