load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("//bazel:lof_rules.bzl", "lof_compile")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "lof_lib",
    srcs = glob(["framework/src/lof/**/*.py"]),
    imports = ["framework/src"],
    deps = [
        "@lof_deps//pydantic",
        "@lof_deps//typer",
        "@lof_deps//jinja2",
        "@lof_deps//networkx",
        "@lof_deps//libcst",
        "@lof_deps//rich",
        "@lof_deps//pyyaml",
    ],
)

py_binary(
    name = "lof_cli",
    srcs = ["framework/src/lof/cli.py"],
    main = "framework/src/lof/cli.py",
    deps = [":lof_lib"],
    data = glob([
        "schemas/*.json",
        "definitions/**/*.json",
        "templates/**/*",
        "instances/*.json",
        "patches/**/*.json",
        "interfaces/**/*",
    ]),
)

lof_compile(
    name = "generated_project",
    types = glob(["definitions/types/*.json"]),
    instances = glob(["instances/*.json"]),
    templates = glob(["templates/**/*"]),
    patches = glob(["patches/**/*.json"]),
    schemas = glob(["schemas/*.json"]),
    targets = glob(["definitions/targets/*.json"]),
)

py_test(
    name = "lof_tests",
    srcs = glob(["framework/tests/**/*.py"]),
    imports = ["framework/src", "framework/tests"],
    deps = [":lof_lib"],
    data = glob([
        "schemas/*.json",
        "definitions/**/*.json",
        "templates/**/*",
        "instances/*.json",
        "patches/**/*.json",
        "interfaces/**/*",
    ]) + glob(["framework/tests/**/*"]),
)
