[project]
name = "lof"
version = "0.1.0"
description = "Language-Oriented Programming Framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "typer>=0.12,<1.0",
    "jinja2>=3.1,<4.0",
    "networkx>=3.0,<4.0",
    "libcst>=1.0,<2.0",
    "rich>=13.0,<14.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5.0,<1.0",
    "pyright>=1.1.0,<2.0",
]

[tool.setuptools.packages.find]
where = ["framework/src"]
include = ["lof*"]

[project.scripts]
lof = "lof.cli:app"

[tool.pytest.ini_options]
testpaths = ["framework/tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["framework/src"]
exclude = ["**/__pycache__", "**/node_modules"]
typeCheckingMode = "strict"
