[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lof-framework"
version = "0.2.0"
description = "Language-Oriented Programming Framework — generative DSL to autonomous projects"
requires-python = ">=3.12"
authors = [{ name = "LOF Contributors" }]
license = { text = "MIT" }
keywords = ["code-generation", "dsl", "low-code", "framework"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "typer>=0.12,<1.0",
    "jinja2>=3.1,<4.0",
    "networkx>=3.0,<4.0",
    "rich>=13.0,<14.0",
    "PyYAML>=6.0,<7.0",
    "z3-solver>=5.0,<6.0",
    "tomli>=1.1,<2.0 ; python_version < '3.11'",
    "tomli-w>=1.2,<2.0",
]

[project.optional-dependencies]
ner = ["spacy>=3.7,<4.0", "click>=8.1"]
python-ast = ["libcst>=1.0,<2.0"]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5.0,<1.0",
    "pyright>=1.1.0,<2.0",
    "spacy>=3.7,<4.0",
]
all = ["lof-framework[ner]", "lof-framework[python-ast]", "lof-framework[dev]"]

[project.urls]
Homepage = "https://github.com/joanix2/LOF-Framework"
Repository = "https://github.com/joanix2/LOF-Framework"

[project.scripts]
lof = "lof.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src/lof"]
exclude = ["**/__pycache__", "**/node_modules"]
typeCheckingMode = "standard"
